--- a/MainMenu/app/src/main/AndroidManifest.xml
+++ b/MainMenu/app/src/main/AndroidManifest.xml
@@ -17,6 +17,15 @@
         </activity>
         <activity android:name=".TOS">
         </activity>
+        <activity android:name=".Inventory">
+        </activity>
+        <activity android:name=".AccountSettings">
+        </activity>
+        <activity android:name=".ReserveItems">
+        </activity>
+        <activity android:name=".MyItems">
+        </activity>
+
     </application>
 
 </manifest>
