Made productinfo an accessible screen
Currently on My Items, this will change later

--- a/MainMenu/app/src/main/AndroidManifest.xml
+++ b/MainMenu/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
         </activity>
         <activity android:name=".MyItems">
         </activity>
+        <activity android:name=".ProductInfo">
+        </activity>
 
     </application>
 
