Made it possible to create products and have them then be shown on ProductInfo
One problem I'm encountering is that bitmaps aren't serializable. As such, I'm making the image on ProductInfo default to the HR logo instead of a custom image.

--- a/MainMenu/app/src/main/AndroidManifest.xml
+++ b/MainMenu/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".ReserveItems" />
         <activity android:name=".MyItems" />
         <activity android:name=".ProductCreate"/>
+        <activity android:name=".ProductInfo"/>
     </application>
 
 </manifest>
