--- a/MainMenu/app/src/main/AndroidManifest.xml
+++ b/MainMenu/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".AccountSettings" />
         <activity android:name=".ReserveItems" />
         <activity android:name=".MyItems" />
+        <activity android:name=".ProductInfo" />
     </application>
 
 </manifest>
