--- a/MainMenu/app/local.properties
+++ b/MainMenu/app/local.properties
@@ -4,7 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri May 10 12:52:06 CEST 2019
-sdk.dir=C\:\\Users\\Mitchell\\AppData\\Local\\Android\\Sdk
-
-
+#Sun May 19 20:47:46 CEST 2019
+sdk.dir=D\:\\AndroidSDK
