--- a/MainMenu/app/local.properties
+++ b/MainMenu/app/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun May 19 20:47:46 CEST 2019
-sdk.dir=D\:\\AndroidSDK
+#Wed May 22 10:31:55 CEST 2019
+sdk.dir=C\:\\Users\\timwo\\AppData\\Local\\Android\\Sdk
