Revert "Merge branch 'DataBase-and-Moderator' of https://github.com/CSARotterdam/TC1819_Team_4 into DataBase-and-Moderator"
This reverts commit e47238fe48e261b5e9aa505f92e7fb04ee6c17e8, reversing
changes made to 9f5e3984349dda754c86f575fedc8beaafda61c4.

--- a/MainMenu/app/src/main/AndroidManifest.xml
+++ b/MainMenu/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:roundIcon="@drawable/hrlogo3"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
-        <activity android:name=".UpdatePassword"></activity>
-        <activity android:name=".ProfileActivity" />
+        <activity android:name=".ProfileActivity"></activity>
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivityActivity">
             <intent-filter>
@@ -25,8 +24,8 @@
         <activity android:name=".AccountSettings" />
         <activity android:name=".ReserveItems" />
         <activity android:name=".MyItems" />
-        <activity android:name=".ProductCreate" />
-        <activity android:name=".ProductInfo" />
+        <activity android:name=".ProductCreate"/>
+        <activity android:name=".ProductInfo"/>
     </application>
 
 </manifest>
