Revert "Merge pull request #29 from CSARotterdam/DataBase-and-Moderator"
This reverts commit 077527c9dacb1dbd3c73d474c49a43b73974c5c7, reversing
changes made to 37c73d612976db7a2f6c33c764797948b1633196.

--- a/MainMenu/app/src/main/AndroidManifest.xml
+++ b/MainMenu/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:roundIcon="@drawable/hrlogo3"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
-        <activity android:name=".statistics"></activity>
-        <activity android:name=".UpdatePassword" />
+        <activity android:name=".UpdatePassword"></activity>
         <activity android:name=".ProfileActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivityActivity">
@@ -21,7 +20,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-        <activity android:name=".MainActivityAdmin"/>
         <activity android:name=".TOS" />
         <activity android:name=".Inventory" />
         <activity android:name=".AccountSettings" />
