--- a/MainMenu/app/local.properties
+++ b/MainMenu/app/local.properties
@@ -4,17 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-#Fri Jun 07 14:32:48 CEST 2019
-=======
-#Fri Jun 07 14:15:02 CEST 2019
->>>>>>> parent of 969723b... Revert "Merge branch 'master' into DataBase-and-Moderator"
-=======
-#Fri Jun 07 14:15:02 CEST 2019
->>>>>>> parent of 969723b... Revert "Merge branch 'master' into DataBase-and-Moderator"
-=======
-#Fri Jun 07 14:15:02 CEST 2019
->>>>>>> parent of 969723b... Revert "Merge branch 'master' into DataBase-and-Moderator"
-sdk.dir=D\:\\AndroidSDK
+#Wed Jun 12 22:23:54 CEST 2019
+>>>>>>>=parent of 969723b... Revert "Merge branch 'master' into DataBase-and-Moderator"
+sdk.dir=C\:\\Users\\Mitchell\\AppData\\Local\\Android\\Sdk
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
