--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun May 19 20:45:29 CEST 2019
-sdk.dir=D\:\\AndroidSDK
+#Wed Jun 12 22:21:01 CEST 2019
+sdk.dir=C\:\\Users\\Mitchell\\AppData\\Local\\Android\\Sdk
