--- a/MainMenu/app/src/main/AndroidManifest.xml
+++ b/MainMenu/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivityAdmin"/>
         <activity android:name=".TOS" />
         <activity android:name=".Inventory" />
         <activity android:name=".AccountSettings" />
