Changes made to the account settings
Removed option to change email, password change works and has updated screen, edited some minor details

--- a/MainMenu/app/local.properties
+++ b/MainMenu/app/local.properties
@@ -4,8 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jun 12 12:10:17 CEST 2019
+#Thu Jun 13 14:47:43 CEST 2019
 >>>>>>>=parent of 969723b... Revert "Merge branch 'master' into DataBase-and-Moderator"
-sdk.dir=C\:\\Users\\timwo\\AppData\\Local\\Android\\Sdk
-=\=\=\=\=\=\=
+sdk.dir=D\:\\AndroidSDK
 <<<<<<<=HEAD
+=\=\=\=\=\=\=
