WIP, added a screen that allows admins to see all users, and authorize reservations/returns
to access, go to the TOS from the user screen
Bugs:
adding one reserve item to borrow list removes everything from the reserves. Same with the returning borrowed things
No stock changing when returning.

--- a/MainMenu/app/src/main/AndroidManifest.xml
+++ b/MainMenu/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
         <activity android:name=".MyItems" />
         <activity android:name=".ProductCreate" />
         <activity android:name=".ProductInfo" />
+        <activity android:name=".ReserveUserlist" />
+        <activity android:name=".RULuser" />
     </application>
 
 </manifest>
