--- a/MainMenu/app/local.properties
+++ b/MainMenu/app/local.properties
@@ -4,8 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jun 13 14:47:43 CEST 2019
+#Sun Jun 16 21:19:14 CEST 2019
 >>>>>>>=parent of 969723b... Revert "Merge branch 'master' into DataBase-and-Moderator"
-sdk.dir=D\:\\AndroidSDK
-<<<<<<<=HEAD
+sdk.dir=C\:\\Users\\Mitchell\\AppData\\Local\\Android\\Sdk
 =\=\=\=\=\=\=
+<<<<<<<=HEAD
